--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@ img {
 .card {
   background: var(--clr-card-bg);
   width: 87%;
+  max-width: 327px;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -57,7 +58,7 @@ img {
   padding-top: 3.3rem;
 }
 h1 {
-  font-size: clamp(2.35rem, 2.5vw, 2.3rem);
+  font-size: 2.35rem;
   line-height: 1.15;
   color: var(--clr-white);
   font-weight: 700;
@@ -100,7 +101,7 @@ h2 {
 }
 
 /* Desktop Styles */
-@media screen and (min-width: 752px) {
+@media screen and (min-width: 1440px) {
   .desktop {
     display: block;
   }
@@ -123,6 +124,7 @@ h2 {
     padding: 0;
     padding-left: 4.9rem;
     padding-top: 4.9rem;
+    padding-bottom: 3rem;
     flex-basis: 100%;
   }
   .main-paragraph {
@@ -131,7 +133,7 @@ h2 {
     text-align: left;
   }
   .card-wrappear {
-    max-width: 75%;
+    max-width: 375px;
   }
   .card_info_stats_container {
     display: flex;
