adding more responsiveness

--- a/index.css
+++ b/index.css
@@ -101,7 +101,8 @@ h2 {
 }
 
 /* Desktop Styles */
-@media screen and (min-width: 1440px) {
+
+@media screen and (min-width: 860px) {
   .desktop {
     display: block;
   }
@@ -109,11 +110,11 @@ h2 {
     display: none;
   }
   html {
-    font-size: 15px;
+    font-size: 12px;
   }
   .card {
     display: flex;
-    width: 76%;
+    width: 97%;
     max-width: 1110px;
     flex-direction: row-reverse;
   }
@@ -151,6 +152,17 @@ h2 {
   }
   h2 {
     font-size: 1.5rem;
+  }
+}
+@media screen and (min-width: 1100px) {
+  html {
+    font-size: 15px;
+  }
+  .card {
+    display: flex;
+    /* width: 76%; */
+    min-width: 1110px;
+    flex-direction: row-reverse;
   }
 }
 
